[project]
name = "studmuffin-ledger"
version = "0.1.0"
description = "Financial automation for the studmuffin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.54.0",
    "cryptography>=44.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
